--- a/HelloDoc_Frontend/src/app/pages/authentication/create-provider/create-provider.component.html
+++ b/HelloDoc_Frontend/src/app/pages/authentication/create-provider/create-provider.component.html
@@ -29,7 +29,7 @@
               label="First Name"
               controlName="firstName"
               [parentForm]="providerInfoForm"
-              className="app-input"
+              className="app-input form-control"
               placeholder="First Name"
               type="text"
               errorTitle="First Name"
@@ -41,7 +41,7 @@
               label="Last Name"
               controlName="lastName"
               [parentForm]="providerInfoForm"
-              className="app-input"
+              className="app-input form-control"
               placeholder="Last Name"
               type="text"
               errorTitle="Last Name"
@@ -53,7 +53,7 @@
               label="Email"
               controlName="email"
               [parentForm]="providerInfoForm"
-              className="app-input"
+              className="app-input form-control"
               placeholder="Email"
               type="email"
               errorTitle="Email"
@@ -65,7 +65,7 @@
               label="Password"
               controlName="password"
               [parentForm]="providerInfoForm"
-              className="app-input"
+              className="app-input form-control"
               placeholder="Password"
               type="text"
               errorTitle="Password"
@@ -83,7 +83,7 @@
               [parentForm]="providerInfoForm"
               controlName="phoneNumber"
               type="text"
-              className="app-input"
+              className="app-input form-control"
             />
           </div>
           <div class="form-group col-md-6 mt-3">
@@ -93,7 +93,7 @@
               controlName="gender"
               [parentForm]="providerInfoForm"
               placeholder="Select Gender"
-              className="app-select"
+              className="app-select form-control"
               errorTitle="Gender"
             />
           </div>
@@ -110,7 +110,7 @@
               label="Business Name"
               controlName="businessName"
               [parentForm]="providerInfoForm"
-              className="app-input"
+              className="app-input form-control"
               placeholder="Business Name"
               type="text"
               errorTitle="Business Name"
@@ -122,7 +122,7 @@
               label="Business Website"
               controlName="businessWebsite"
               [parentForm]="providerInfoForm"
-              className="app-input"
+              className="app-input form-control"
               placeholder="Business Website"
               type="text"
               errorTitle="Business Website"
@@ -134,7 +134,7 @@
               label="Medical License"
               controlName="medicalLicense"
               [parentForm]="providerInfoForm"
-              className="app-input"
+              className="app-input form-control"
               placeholder="Medical License"
               type="text"
               errorTitle="Medical License"
@@ -146,7 +146,7 @@
               label="Npi Number"
               controlName="npiNumber"
               [parentForm]="providerInfoForm"
-              className="app-input"
+              className="app-input form-control"
               placeholder="Npi Number"
               type="text"
               errorTitle="Npi Number"
@@ -162,7 +162,7 @@
               #photoInput
               id="photoInput"
               accept="image/*"
-              class="app-input"
+              class="app-input form-control"
               formControlName="document"
             />
           </div>
@@ -171,7 +171,7 @@
               label="Notes"
               controlName="adminNotes"
               [parentForm]="providerInfoForm"
-              className="app-textarea title-description"
+              className="app-textarea title-description form-control"
               placeholder="Notes"
               errorTitle="Notes"
               testId="notes"
@@ -191,7 +191,7 @@
               label="City"
               controlName="city"
               [parentForm]="providerInfoForm"
-              className="app-input"
+              className="app-input form-control"
               placeholder="City"
               type="text"
               errorTitle="City"
@@ -202,7 +202,7 @@
             <app-input
               label="Zip"
               [parentForm]="providerInfoForm"
-              className="app-input"
+              className="app-input form-control"
               placeholder="Enter Zip"
               errorTitle="Zip"
               controlName="zip"
@@ -217,7 +217,7 @@
               placeholder="Address"
               controlName="address"
               [parentForm]="providerInfoForm"
-              className="app-textarea title-description"
+              className="app-textarea title-description form-control"
               errorTitle="Address"
               testId="address"
             />
