--- a/HelloDoc_Frontend/src/app/pages/admin/admin-dashboard/patient-list/view-case/view-case.component.scss
+++ b/HelloDoc_Frontend/src/app/pages/admin/admin-dashboard/patient-list/view-case/view-case.component.scss
@@ -19,3 +19,10 @@
   color: #00aaff;
 }
 
+.img-thumbnail {
+  max-width: 100%;
+  width: fit-content;
+  height: 300px;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+}
