--- a/HelloDoc_Frontend/src/app/pages/admin/admin-dashboard/patient-list/block-case/block-case.component.html
+++ b/HelloDoc_Frontend/src/app/pages/admin/admin-dashboard/patient-list/block-case/block-case.component.html
@@ -1,5 +1,5 @@
 <div class="modal-header d-flex justify-content-between align-items-center">
-  <h5 class="modal-title">Block Case</h5>
+  <h5 class="modal-title">Block User</h5>
   <button
     type="button"
     class="close btn rounded-pill"
@@ -11,17 +11,17 @@
 </div>
 <div class="modal-body">
   <form [formGroup]="blockCaseForm">
-    <div class="patientName mb-3">
+    <div class="userName mb-3">
       <app-alphabet-only-input
-        label="Patient Name"
-        controlName="patientName"
+        label="User Name"
+        controlName="userName"
         [parentForm]="blockCaseForm"
         className="app-input form-control"
-        placeholder="Patient Name"
+        placeholder="User Name"
         type="text"
-        errorTitle="Patient Name"
-        testId="patientName"
-        [value]="patientName"
+        errorTitle="User Name"
+        testId="UserName"
+        [value]="userName"
       />
     </div>
     <div class="cancellation mb-3">
